# nlq-data-agent

./: .gitignore  DESIGN.md  README.md  analyze_logs.py  app.py  baseline_after_improvements_20260507_183814.json  baseline_final.json  baseline_results.json  baseline_results_final.json  baseline_results_fixed.json  baseline_results_v2.json  baseline_results_v3.json  baseline_results_v4.json  baseline_simplified_20260507_183717.json  baseline_verified_20260507_182806.json  pyproject.toml  requirements.txt
.github/workflows/: auto-approve.yml
config/: default.yaml
src/: README.md  __init__.py  agent.py  config.py  exceptions.py  execution_eval_set.py  execution_evaluator.py  logging_config.py  result_comparator.py  types.py
src/analysis/: __init__.py  eval_set.py  service_analysis_agent.py  statistical_tests.py  templates.py
src/bigquery_context/: __init__.py  antipatterns.py  domain_knowledge.py  glossary.py  sample_data.py  schema_full.py  successful_queries.py
src/eval/: __init__.py  eval_set.py  evaluator.py
src/executor/: __init__.py  bigquery_client.py  data_processor.py
src/query/: __init__.py  context_builder.py  example_selector.py  explanation_generator.py  generator.py  intent_classifier.py  sql_analyzer.py  validator.py
tests/: test_config.py  test_validator.py
