[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlq-data-agent"
version = "0.1.0"
description = "자연어 쿼리를 BigQuery SQL로 변환하는 LLM 기반 에이전트"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Liner Data Team" }
]
license = { text = "MIT" }
dependencies = [
    "google-cloud-bigquery>=3.38.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.20.0",
    "aiohttp>=3.8.0",
    "plotly>=5.0.0",
    "jinja2>=3.1.0",
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "streamlit>=1.28.0",
    "db-dtypes>=1.5.1",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml",
    "types-aiohttp",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-too-long (black handles it)

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.bigquery_context.*"
ignore_errors = true
